--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "build": "webpack build"
   },
   "dependencies": {
-    "gl-matrix": "^3.4.3"  
+    "dat.gui": "^0.7.9",
+    "gl-matrix": "^3.4.3"
   },
-
   "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
