--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
-    "gl-matrix": "^3.4.3"
+    "gl-matrix": "^3.4.3",
+    "three": "^0.145.0"
   },
   "devDependencies": {
     "webpack": "^5.74.0",
