--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "real-time-3d-graphics-with-webgl-2",
   "version": "1.0.0",
   "scripts": {
+    "clean": "rimraf dist",
     "build": "rimraf dist && webpack build",
-    "build.dev": "webpack build" ,
+    "build.dev": "webpack build",
     "build.dev.watch": "webpack build --watch"
   },
   "dependencies": {
@@ -12,6 +13,7 @@
     "three": "^0.145.0"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.3",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
