--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "fflate": "^0.8.0",
     "gl-matrix": "^3.4.3",
     "mjolnir.js": "^2.7.1",
     "three": "^0.145.0"
