--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "three": "^0.145.0"
   },
   "devDependencies": {
+    "@types/webgl2": "^0.0.7",
+    "@webgpu/types": "^0.1.34",
     "html-webpack-plugin": "^5.5.3",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.4.1",
