--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "real-time-3d-graphics-with-webgl-2",
   "version": "1.0.0",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./public",
-    "build": "rimraf ./public && webpack build",
     "build.dev": "webpack build",
-    "build.dev.watch": "webpack build --watch"
+    "build": "rimraf ./public && webpack build",
+    "build.dev.watch": "webpack build --watch",
+    "start.dev": "npm run build.dev && webpack-dev-server --config ./webpack.config.js"
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
@@ -15,8 +17,14 @@
     "three": "^0.145.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
     "@types/webgl2": "^0.0.7",
     "@webgpu/types": "^0.1.34",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.5.3",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.4.1",
