spector.js 테스트 ...
import * as SPECTOR from 'spectorjs';
const spector = new SPECTOR.Spector();
spector.displayUI();

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fflate": "^0.8.0",
     "gl-matrix": "^3.4.3",
     "mjolnir.js": "^2.7.1",
+    "spectorjs": "^0.9.30",
     "three": "^0.145.0"
   },
   "devDependencies": {
